# algostr

./: README.md  insertion_sort.csv  pyproject.toml
algostr/: main.py
algostr/sorting_algos/: heap_sort.py  insertion_sort.py  selection_sort.py  shell_sort.py
algostr/utils/: dict_to_csv.py
tests/: test_algostr.py
